syntax = "proto3";

option java_package = "com.github.damontecres.stashapp.proto";
option java_multiple_files = true;

message PinPreferences {
  string pin = 1;
  string read_only_pin = 2;
  bool auto_submit = 3;
}

enum ThemeStyle {
  THEME_STYLE_SYSTEM = 0;
  THEME_STYLE_LIGHT = 1;
  THEME_STYLE_DARK = 2;
}

message InterfacePreferences {
  bool use_compose_ui = 1;
  int32 card_size = 2;
  bool play_video_previews = 3;
  bool remember_selected_tab = 4;
  int32 card_preview_delay_ms = 5;
  int32 slide_show_interval_seconds = 6;
  int32 slide_show_image_clip_pause_ms = 7;

  bool show_grid_jump_buttons = 8;

  string theme = 9;
  ThemeStyle theme_style = 10;

  bool show_progress_when_skipping = 11;
  bool play_movement_sounds = 12;
  bool use_up_down_previous_next = 13;
  bool captions_by_default = 14;

  TabPreferences tab_preferences = 15;

  bool scroll_next_view_all = 16;
  bool scroll_top_on_back = 17;
  bool show_position_footer = 18;
  bool show_rating_on_cards = 19;
  bool video_preview_audio = 20;
  bool page_with_remote_buttons = 21;

}

message TabPreferences {
  repeated string gallery = 1;
  repeated string group = 2;
  repeated string performer = 3;
  repeated string studio = 4;
  repeated string tags = 5;
}

enum PlaybackFinishBehavior {
  PLAYBACK_FINISH_BEHAVIOR_DO_NOTHING = 0;
  PLAYBACK_FINISH_BEHAVIOR_REPEAT = 1;
  PLAYBACK_FINISH_BEHAVIOR_GO_BACK = 2;
}

enum StreamChoice{
  STREAM_CHOICE_HLS = 0;
  STREAM_CHOICE_DASH = 1;
  STREAM_CHOICE_MP4 = 2;
  STREAM_CHOICE_WEBM = 3;
}

enum Resolution {
  RESOLUTION_UNSPECIFIED = 0;
  RESOLUTION_240P = 1;
  RESOLUTION_480P = 2;
  RESOLUTION_720P = 3;
  RESOLUTION_1080P = 4;
  RESOLUTION_2160P = 6;
}

enum PlaybackHttpClient{
  PLAYBACK_HTTP_CLIENT_OKHTTP = 0;
  PLAYBACK_HTTP_CLIENT_BUILTIN = 1;
}

message PlaybackPreferences {
  int32 skip_forward_seconds = 1;
  int32 skip_backward_seconds = 2;
  PlaybackFinishBehavior playback_finish_behavior = 3;
  bool dpad_skipping = 4;
  StreamChoice stream_choice = 5;
  bool show_debug_info = 6;
  int32 controller_timeout_ms = 7;
  bool save_play_history = 8;
  bool start_with_no_audio = 9;
  Resolution transcode_above_resolution = 10;
  bool enable_video_filters = 11;
  bool save_video_filters = 12;
  bool enable_debug_logging = 13;
  PlaybackHttpClient playback_http_client = 14;
  // TODO direct play overrides
}

message CachePreferences {
  // TODO
}

message UpdatePreferences {
  bool check_for_updates = 1;
  string update_url = 2;
}

message AdvancedPreferences {
  bool enable_crash_reporting = 1;
  bool log_errors_to_server = 2;
  bool enable_experimental_features = 3;
  int32 network_timeout_seconds = 4;
  bool trust_self_signed_certificates = 5;
  int32 image_thread_count = 6;
}

message SearchPreferences {
  int32 max_results = 1;
  int32 search_delay_ms = 2;
}

message StashPreferences {
  PinPreferences pin_preferences = 1;
  InterfacePreferences interface_preferences = 2;
  PlaybackPreferences playback_preferences = 3;
  CachePreferences cache_preferences = 4;
  UpdatePreferences update_preferences = 5;
  AdvancedPreferences advanced_preferences = 6;
  SearchPreferences search_preferences = 7;
}
